--- a/vsts/dps-e2e.yaml
+++ b/vsts/dps-e2e.yaml
@@ -35,7 +35,7 @@ jobs:
   - script: 'python -m pip install -U -r requirements_test.txt'
     displayName: 'Install provisioning service SDK and pytest'
 
-  - script: 'python pytest $(Build.SourcesDirectory)/azure_provisioning_e2e/tests/test_scenario_simple_sync.py'
+  - script: 'pytest $(Build.SourcesDirectory)/azure_provisioning_e2e/tests/test_scenario_simple_sync.py'
     displayName: 'Run Specified E2E Test with env variables'
 
     env:
