--- a/vsts/dps-e2e.yaml
+++ b/vsts/dps-e2e.yaml
@@ -38,7 +38,7 @@ jobs:
 #  - script: 'pytest $(Build.SourcesDirectory)/azure_provisioning_e2e/tests/test_scenario_simple_sync.py'
 #    displayName: 'Run Specified E2E Test with env variables'
 
-  - script: echo hello world $IOTHUB_CONNECTION_STRING
+  - script: echo hello world
      displayName: 'see if it works'
 
     env:
