--- a/vsts/dps-e2e.yaml
+++ b/vsts/dps-e2e.yaml
@@ -8,14 +8,14 @@ jobs:
     vmImage: 'Ubuntu 16.04'
   strategy:
       matrix:
-#        Python27:
-#          python.version: '2.7'
-#        Python34:
-#          python.version: '3.4'
+        Python27:
+          python.version: '2.7'
+        Python34:
+          python.version: '3.4'
         Python35:
           python.version: '3.5'
-#        Python36:
-#          python.version: '3.6'
+        Python36:
+          python.version: '3.6'
         Python37:
           python.version: '3.7'
       maxParallel: 1
