--- a/vsts/dps-e2e.yaml
+++ b/vsts/dps-e2e.yaml
@@ -8,10 +8,10 @@ jobs:
     vmImage: 'Ubuntu 16.04'
   strategy:
       matrix:
-        Python27:
-          python.version: '2.7'
-        Python34:
-          python.version: '3.4'
+#        Python27:
+#          python.version: '2.7'
+#        Python34:
+#          python.version: '3.4'
         Python35:
           python.version: '3.5'
         Python36:
